public/css/help-modal.scss
@use "./config";

.help-content-container {
    display: flex;
    flex: 1;
    height: 35em;

    .help-sidebar {
        display: flex;
        flex-direction: column;
        gap: config.$gutter-quarter;
        white-space: nowrap;
        padding: config.$gutter-half 0;

        nav {
            display: flex;
            gap: config.$gutter-quarter;
            justify-content: center;
            input[type="search"] {
                flex: 1;
                max-width: 10em;
                display: none;
            }
            padding: 0 config.$gutter-quarter;
        }

        .help-items {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
            flex: 1;
        }

        a.help-item {
            display: block;
            padding: config.$gutter-eighth config.$gutter-half;
            color: config.$color;
            text-decoration: none;
            border: 2px solid transparent;
            border-radius: 2px;
            position: relative;

            &.active {
                font-weight: bold;
                color: config.$primary-color;
                background-color: config.$sidebar-bg-color;
                border-color: config.$border-color;
                border-right-color: config.$sidebar-bg-color;
                margin-right: -2px;
                cursor: default;
            }

            &:hover:not(.active) {
                background-color: config.$accent-bg;
            }
        }
    }

    .help-content {
        flex: 1;
        padding: config.$gutter;
        background-color: config.$sidebar-bg-color;
        border: 2px solid config.$border-color;
        border-right: none;
        border-top-left-radius: 2px;
        border-bottom-left-radius: 2px;
        min-width: 30em;
        max-width: 100em;
        overflow: auto;

        .help-section {
            display: none;
            flex-direction: column;
            gap: (config.$gutter * 2);

            > section {
                border-left: config.$gutter-quarter solid rgba(config.$border-color, 0.5);
                padding-left: config.$gutter-half;
            }

            section {
                display: flex;
                flex-direction: column;
                gap: config.$gutter-half;

                .section-content {
                    display: flex;
                    flex-direction: column;
                    gap: config.$gutter;
                }
            }

            &.active {
                display: flex;
            }
        }

        header {
            font-weight: bold;
            font-size: 125%;
        }
        h3 {
            font-weight: bold;
            font-size: 105%;
        }

        .image-container {
            padding: config.$gutter-half;
            display: flex;
            gap: config.$gutter;
            justify-content: center;
            align-items: center;
        }

        figure {
            img {
                display: block;
                margin: 0 auto;
                max-height: 20em;
                max-width: 40em;
                border-radius: config.$gutter-quarter;
                padding: config.$gutter-half;
                border: 1px solid config.$border-color;
                box-shadow:
                    2px 2px 5px rgba(0, 0, 0, 0.5),
                    -2px -2px 5px rgba(0, 0, 0, 0.15);
            }
        }

        kbd {
            font-size: 75%;
        }

        a[href^="#help-content-"] {
            display: inline-block;

            &:before {
                content: "?";
                font-size: 80%;
                display: inline-block;
                padding-right: 2px;
            }
        }

        a[target="_blank"] {
            display: inline-block;

            &::after {
                display: inline-block;
                margin-left: 2px;
                font-size: 80%; // this icon is kinda big

                // mostly copied from fontawesome
                font-family: "Font Awesome 7 Free";
                content: "\f08e";
                font-weight: 900;
                font-style: normal;
                width: 1.25em;
                text-align: center;
            }
        }
    }

    .help-keyword, .help-keyword-menu, [data-shortcut] {
        display: inline-block;
        &:before {
            content: "\b7";
        }
    }
    .help-keyword {
        color: config.$help-keyword-color;
        text-decoration: underline;
        text-decoration-style: dotted;
        cursor: pointer;
    }

    .help-keyword-menu {
        color: config.$help-keyword-menu-color;
    }

    [data-shortcut] {
        cursor: pointer;
        color: config.$help-keyword-shortcut-color;
    }

    .with-icon {
        display: inline-block;
    }

    .parenthetical {
        display: inline-block;

        &:before {
            content: "(";
        }
        &:after {
            content: ")";
        }
    }

    code {
        color: config.$code-color;
    }

    .transparent-checkerboard {
        display: inline-block;
        vertical-align: text-top;
    }
}

.popover {
    .kbd-command-list {
        font-size: 80%;
    }

    .color-swatch {
        display: inline-block;
        vertical-align: text-top;
    }
}

